alignment fixes

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -37,9 +37,7 @@ p {
     justify-content: center;
 }
 .contents {
-    margin: 5em;
-    width: 85%;
-    min-width: 85%; /*SOLUTION to big-zoom problem? */
+
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
@@ -60,9 +58,11 @@ Header Section
     width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: right;
 }
 #imgback {
     background-image: url(Images/laughing.png);
+    text-align: right;
 }
 #filter {
     height: 100vh;
@@ -300,7 +300,8 @@ Portrait Section
 }
 #idoit h1 {
     text-align: center;
-    margin: 10px auto;
+    margin-top: 1em auto;
+    margin-bottom: .3em auto;
     color: #EF5728;
     font-size: 3rem;
 }
@@ -308,18 +309,20 @@ Portrait Section
     color: #5e727c;
 }
 .threecol {
-    width: 100%;
+    width: 85%;
     margin: 3em auto;
     display: flex;
     flex-flow: column wrap;
     align-items: flex-start;
     justify-content: none;
+    margin-top: 0.3em;
 }
 .threecol div {
     width: 100%;
     padding: 10px;
     border-left: 3px solid #EF5728;
     text-align: center;
+    margin-top: 0.3em;
     margin-bottom: 0.7em;
 }
 
@@ -419,7 +422,7 @@ footer a:hover {
 /* SECTION ID: resume */
 #resume {
     font-size: 1.5em;
-    background-color: #FCF8F3;
+    background-color: #f7efe6;
 }
 #resume h1 {
     text-align: center;
@@ -865,7 +868,7 @@ input:-webkit-autofill {border:1px solid; -webkit-box-shadow: 0 0 0 30px white i
     flex-direction: column;
     position: relative;
     padding-top: 1.5rem;
-    padding-bottom: 1.5rem
+    padding-bottom: 3rem
 }
 
 .history:before {
